--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>2048</title>
-        <script src="script.js"></script>
+        <script src="script.js" charset="utf-8"></script>
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
