--- a/index.html
+++ b/index.html
@@ -7,12 +7,15 @@
         <link href="style.css" rel="stylesheet">
     </head>
     <body>
+        <h1>2048 game</h1>
         <div class="score-container">
+            <div class="scoredetails">
             <div class="score-label">Score</div>
             <span id=score-num>0</span>
+            <div id="result"></div>
         </div>
-        <div id="result"></div>
-        <div class="grid">
+        </div>
+        <div class="grid"></div>
         </div>
     </body>
 </html>
